--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="main.css">
 
-    <title>Document</title>
+    <title>Geographie_10a_Gruppenarbeit_ElisaMarieBlock_FranziskaMichael_LucaSchirmer_Bodendegration_Conceptmap</title>
 </head>
 <body>
     <script>
@@ -383,16 +383,6 @@
                     <div class="infos">
                         <div class="Überschrift">
                             <h1> Wir Verlieren an Boden</h1>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
                         </div>
 
                         <p class="main-text"> 
