--- a/Quellen.html
+++ b/Quellen.html
@@ -30,8 +30,8 @@
             <h2 style="margin-left: 5vh; ">Quelle: 3</h2>
                 <p style="margin-left: 5vh; margin-bottom: 5vh;">
                     <br>BENDER,H.-U.ET AL (1999):Terra. Geographie 10. Gymnasium. Thüringen. Gotha: Klett-Perthes.
-                    <a target="_blank"href="www.bodenwelten.de/content/bodenschonende-landwirtschaft">
-                        <br><br><br>www.bodenwelten.de/content/bodenschonende-landwirtschaft 
+                    <a target="_blank"href="https://www.bodenwelten.de/content/bodenschonende-landwirtschaft">
+                        <br><br><br>https://www.bodenwelten.de/content/bodenschonende-landwirtschaft 
                     </a>(Zugriff: 2014-03-19)
                 </p>
 
