--- a/Quellen.html
+++ b/Quellen.html
@@ -7,14 +7,15 @@
     <title>Quellen</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
-    <div class="Parent">
-    </div>
-    <div class="Überschrift">
-       <h1 style="margin-bottom: 5vh;">Bodendegration Quellen:</h1>         
-            
-            <h2 style="margin-left: 5vh;">Quelle: 1</h2>
-                <p style="margin-left: 5vh; margin-bottom: 5vh;">
+<body style="overflow: hidden; overflow-y: scroll; min-width: 100vw;min-height: 100vh;">
+    <div class="Überschrift" width="100vw">
+        <div class="FLEXparent" width="100vw">
+            <div class="CHILDflex" width="100vw">
+                <h1 style="margin-left: 0%; margin-bottom: 5vh;">Bodendegration Quellen:</h1>         
+            </div>
+        </div>    
+            <h2 style="margin-left: 5vh; width: 100vw;">Quelle: 1</h2>
+                <p style="margin-left: 5vh; margin-bottom: 5vh; width: 100vw;">
                     <br>BAUER,J.ET AL(1996): Mensch und Raum. Seydlitz. Physische Geographie. 
                     <br>Berlin: Cornelsen/Schroedel.HORN,R.ET AL(2006): Schwerlast auf dem Acker. 
                     <a target="_blank"href="https://www.bodenwelten.de/content/was-tun-gegen-bodenverdichtung">
@@ -23,20 +24,20 @@
                     <br>
                     </a>
                 </p>
-            <h2 style="margin-left: 5vh; ">Quelle: 2</h2>
-                <p style="margin-left: 5vh; margin-bottom: 5vh;">
+            <h2 style="margin-left: 5vh; width: 100vw;">Quelle: 2</h2>
+                <p style="margin-left: 5vh; margin-bottom: 5vh; width: 100vw;">
                     <br>KÖHLER,P.(2010):Terra. Geographie 10. Gymnasium. Thüringen. Gotha: Klett-Perthes.
                 </p>
-            <h2 style="margin-left: 5vh; ">Quelle: 3</h2>
-                <p style="margin-left: 5vh; margin-bottom: 5vh;">
+            <h2 style="margin-left: 5vh; width: 100vw;">Quelle: 3</h2>
+                <p style="margin-left: 5vh; margin-bottom: 5vh; width: 100vw;">
                     <br>BENDER,H.-U.ET AL (1999):Terra. Geographie 10. Gymnasium. Thüringen. Gotha: Klett-Perthes.
                     <a target="_blank"href="https://www.bodenwelten.de/content/bodenschonende-landwirtschaft">
                         <br><br><br>https://www.bodenwelten.de/content/bodenschonende-landwirtschaft 
                     </a>(Zugriff: 2014-03-19)
                 </p>
 
-            <h2 style="margin-left: 5vh;">Quelle: 4</h2>
-                <p style="margin-left: 5vh; margin-bottom: 5vh;">
+            <h2 style="margin-left: 5vh; width: 100vw;">Quelle: 4</h2>
+                <p style="margin-left: 5vh; margin-bottom: 5vh; width: 100vw;">
                     <br>
                     Was ist Bodendegration?
                     <br>
